--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       content="Web site created using create-react-app"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,400&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
