--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,21 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,400&display=swap');
     </style>
+    <script type="text/javascript">
+      <!--  gh-pages reload fix  -->
+      (function (l) {
+        if (l.search[1] === '/') {
+          var decoded = l.search
+                  .slice(1)
+                  .split('&')
+                  .map(function (s) {
+                    return s.replace(/~and~/g, '&');
+                  })
+                  .join('?');
+          window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
+        }
+      })(window.location);
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
